--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-updates": "~0.15.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-element-dropdown": "^2.4.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-web": "~0.18.7"
